Added conf reload setting

--- a/status/default/app.conf
+++ b/status/default/app.conf
@@ -8,10 +8,14 @@ check_for_updates = false
 
 [ui]
 is_visible = 0
+show_in_nav = false
 label = Status
 
 [launcher]
 author = Shay Harding
 description = Cumulative status check for Splunk services
 version = 0.2.0
+
+[triggers]
+reload.status_rest_handler = simple
 
