--- a/status/default/status_rest_handler.conf
+++ b/status/default/status_rest_handler.conf
@@ -24,11 +24,10 @@ hec_port = 8088
 
 ## WEB PORT STATUS
 ##
-## This is indirectly checked when the endpoint has no authentication and is exposed
-## via the web port. If requireAuthentication is set to true in restmap.conf then
-## endpoint is accessible on port 8089 and this check will occur as an HTTP GET
-## request.
-web_status = 1
+## This is off by default as the endpoint runs on the web port so if it's responding then
+## the web port is good. If checking the endpoint via the Splunk management port, this
+## can be turned on to also check the web port using an HTTP(S) GET request.
+web_status = 0
 
 ## How long to wait for the web port to respond
 web_status_timeout = 3
