Added shc_out_of_sync_node check

--- a/status/default/status_rest_handler.conf
+++ b/status/default/status_rest_handler.conf
@@ -46,6 +46,9 @@ shc_maintenance_mode = 1
 ## Status of the SHC member; "Up" indicates a good value, any other value is a failure
 shc_status = 1
 
+## Indicates if a SHC member's baseline is out-of-sync with the captain's baseline
+shc_out_of_sync_node = 1
+
 ## The cluster has enough members to support the replication factor
 shc_captain_service_ready_flag = 0
 
