Added configuration page for token

--- a/status/default/app.conf
+++ b/status/default/app.conf
@@ -1,14 +1,14 @@
 [install]
 is_configured = 0
-build = 1002
+build = 1004
 
 [package]
 id = status
 check_for_updates = false
 
 [ui]
-is_visible = 0
-show_in_nav = false
+is_visible = 1
+show_in_nav = 1
 label = Status
 
 [launcher]
